--- a/html lessons/index.html
+++ b/html lessons/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    <!---Listing--->
     <h1>Movies</h1>
     <h2>My Top 3 Movies:</h2>
 
@@ -25,19 +25,100 @@
         <li>Parasite</li>
         <li>Annie Hall</li>
     </ul>
+    <div>
+        <ol>
+            <li>fav skz songs
+                <ul>
+                    <li>Frezee</li>
+                    <li>Charmer</li>
+                    <li>Domino</li>
+                </ul>
+            </li>
+            <li>Silent Cry</li>
+            <li>Easy</li>
+            <li>Thunderous</li>
+        </ol>
+    </div>
 
-    <ol>
-        <li>fav skz songs
-            <ul>
-                <li>frezee</li>
-                <li>Charmer</li>
-                <li>Domino</li>
-            </ul>
-        </li>
-        <li>Silent Cry</li>
-        <li>Easy</li>
-        <li>Thunderous</li>
-    </ol>
+    <!---Block vs. Inline Elements - Divs nd Spans--->
+
+    <div>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Kolm%C3%A5rden_Wolf.jpg" width="200px"
+            alt="big old wolfie">
+    </div>
+
+    <!---An Odd Assortment of Elements: HR, BR, Sup, & Sub--->
+
+    <h2>Auguries of Innocence</h2>
+    <p>
+        To see a World in a Grain of Sand<br>
+        And a Heaven in a Wild Flower<br>
+        Hold Infinity in the palm of your hand<br>
+        And Eternity in an hour<br>
+        A Robin Red breast in a Cage<br>
+
+    </p>
+
+    To see a World in a Grain of Sand<br>
+    And a Heaven in a Wild Flower<br>
+    Hold <sup><a href="https://www.poetryfoundation.org/poems/43650/auguries-of-innocence">Infinity</a></sup> in the
+    palm of your hand<br>
+    And Eternity in an hour<br>
+
+    Robin Red breast in a in a Cage<br>
+
+    <p>Almost every developer's favorite molecule is C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>, also known
+        as "caffeine."
+
+    </p>
+
+
+    <!---Entity Codes-->
+
+
+    <!---Semantic Elements-->
+
+    <nav class="menu">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!---Tables: TR, TD, and TH Elements--->
+
+    <table>
+        <thead>
+            <tr>
+                <th>Subscription</th>
+                <th>Price</th>
+                <th>Support</th>
+            </tr>
+        <tbody>
+            <tr>
+                <td>Free</td>
+                <td>Free</td>
+                <td>N/A</td>
+            </tr>
+            <tr>
+                <td>Personal</td>
+                <td>$9.99</td>
+                <td>Weekdays</td>
+            </tr>
+            <tr>
+                <td>Business</td>
+                <td>$49.99</td>
+                <td>24/7</td>
+            </tr>
+    </table>
+
+
+
+
+
+    <!---The Form Element--->
+
 
 
 
