--- a/exercises/forms.html
+++ b/exercises/forms.html
@@ -119,6 +119,25 @@
             <label for="password">Password</label>
         </p>
         <button>Register</button>
+
+    </form>
+
+    <h2>Validation Demo</h2>
+    <form action="/dummy">
+        <label for="first">Enter First Name</label>
+        <input type="text" name="first" id="first" required>
+        <label for="username">Username</label>
+        <p>
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" minlength="5" maxlength="20" required>
+        </p>
+
+        <p>
+            <input type="email" required>
+            <input type="url" required>
+        </p>
+
+        <button>Submit</button>
     </form>
 
 </body>
